log
Sat Mar 19 17:27:05 HSP 2022: 
 tests:  0|6
total_score: 0/70
3a9a19c
Sat Mar 19 19:28:17 HSP 2022: 
 list.c | 45 ++++++++++++++++++++++++++++++++++-----------
 1 file changed, 34 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:42:17: error: expected expression before '>' token
   return list - > current -> data;
                 ^
list.c: In function 'prevList':
list.c:51:28: error: 'List {aka struct List}' has no member named 'prev'
     list -> current = list -> prev;
                            ^~
list.c: In function 'pushCurrent':
list.c:72:10: error: variable or field 'aux' declared void
     void aux = list -> current -> data;
          ^~~
list.c:72:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     void aux = list -> current -> data;
                ^~~~
list.c:75:35: error: comparison between pointer and integer [-Werror]
     while(list -> current -> prev != aux){
                                   ^~
list.c: In function 'nextList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a9918aa
Sat Mar 19 19:29:56 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:51:28: error: 'List {aka struct List}' has no member named 'prev'
     list -> current = list -> prev;
                            ^~
Compilation failed
58dd02a
Sat Mar 19 19:30:33 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3f0d4a2
Sun Mar 20 12:09:15 HSP 2022: 
 list.c | 34 +++++++++++++++++++---------------
 1 file changed, 19 insertions(+), 15 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'prevList':
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b16da17
Sun Mar 20 12:09:50 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
2f47c23
Sun Mar 20 12:16:07 HSP 2022: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d6fe6dd
